Fix image overflow

--- a/css/about.css
+++ b/css/about.css
@@ -44,10 +44,10 @@
 }
 
 .conta {
-  height: 140px;
+  height: 90px;
   width: 190px;
   position: relative;
-  top: -40px;
+  top: -20px;
 }
 
 .hello-text {
