--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ nav a:hover {
 
 .conta {
   width: 190px;
-  height: 180px;
+  height: 140px;
 }
 
 .hello-text {
